--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "sass": "^1.62.1",
     "vue": "^3.2.47"
   },
