--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-webfont-dl": "^3.7.4",
     "vue-tsc": "^1.2.0"
   }
 }
